--- a/m04w08/index.html
+++ b/m04w08/index.html
@@ -10,13 +10,37 @@
     <!-- CSS as second -->
     <link rel="stylesheet" href="./style.css">
 
-    <!-- JS at the end -->
-    <script src="./app.js"></script>
+    <!-- External JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Custom JS -->
+    <script defer src="./app.js"></script>
 </head>
 
 <body>
 
-    <h1>Client Side Javascript & jQuery 🪄</h1>
+    <header>
+        <h1>Client Side Javascript & jQuery 🪄</h1>
+        <p class="description">This is a description from the html!</p>
+    </header>
+
+    <main id="main">
+        <section>
+            <input id="my-input" type="text">
+            <button id="my-button">Add topic!</button>
+        </section>
+
+        <section>
+            <h2>I learned today about:</h2>
+            <ul id="my-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+            </ul>
+        </section>
+    </main>
 
 </body>
 
